--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
     "dir" : ["/var/LHS", "/var/Record"],
     "twitter" : {
-        "key" : "",
-        "secret" : ""
+        "apiKey" : "",
+        "apiSecret" : "",
+        "accessToken" : "",
+        "accesssecret" : ""
     }
 }
