--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
         "apiKey" : "",
         "apiSecret" : "",
         "accessToken" : "",
-        "accesssecret" : "",
+        "accessSecret" : "",
         "user" : ""
     }
 }
